# cross_compile_template

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/toolchains/: toolchain-container.cmake
scripts/: Dockerfile  buildsh_completion.bash
src/: CMakeLists.txt  main.cpp
